# pretty_tree

./: .gitignore  .htmlvalidate.json  .markdownlint.json  .prettierrc  AGENTS.md  CLAUDE.md  PLAN.md  README.md  install.sh  main.py  pyproject.toml
.serena/: project.yml
0.0.2/docs/: GRAMMAR.md  SPEC.md
0.0.2/samples/: example.ptree
0.0.2/src/: extension.ts
0.0.4/: .eslintrc.json  .mocharc.json  CHANGELOG.md  PLAN.md  README.md  package.json
0.0.4/config/: ptree.default-config.json  ptree.spec-config.json  ptreeconfig.schema.json
0.0.4/docs/: GRAMMAR.md  SEMANTIC_TOKENS.md  SPEC.md
0.0.4/samples/: example.ptree
0.0.4/src/: cli.ts  codeActions.ts  extension.ts  formatter.ts
0.2.0/: CHANGELOG.md  README.md  package-lock.json  package.json
0.2.0/docs/: GRAMMAR.md  SEMANTIC_TOKENS.md
0.2.0/src/: semanticTokens.ts
crt-effect/: index.html  script.js
docs/: 01_VISION_AND_GOALS.md  03_CONCEPTS.md  04_AUTHORING_GUIDE.md  05_PROFILES.md  07_USE_CASES.md  09_EXAMPLES.md  13_FAQ.md  14_ADOPTION_GUIDE.md  15_POSITIONING.md  INDEX.md  README.md
docs/ptree-landing-page/: script.js
docs/ptree-landing-page-claude/: styles.css
ptree-0.0.4/: CHANGELOG.md  PLAN.md
ptree-landing-page/: index.html  styles.css
ptree-landing-page-claude/: 404.html  index.html  styles.css
ptree-syntax/: .vscodeignore  CHANGELOG.md  PLAN.md  README.md  language-configuration.json  legacy-spec-0.0.3.md  package-lock.json  package.json
ptree-vscode-extension/: LICENSE  README.md  package.json
ptree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+119 files in other folders)
