[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ptree"
version = "0.0.4"
description = "Pretty Tree is a VS Code extension for pretty tree directory data structures."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hookify>=0.0.1",
]

[project.scripts]
ptree = "main:main"

[tool.setuptools]
py-modules = ["main"]
